data/derived/sp14/progs/unify/prog1185.ml.out
Characters 86-87:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'b -> 'c) -> 'b -> 'a -> 'c
       but an expression was expected of type
         ('a -> 'b -> 'c) -> 'b -> 'a -> 'b -> 'c
       The type variable 'c occurs inside 'b -> 'c
